# FixedWidthInts

./: CMakeLists.txt  LICENSE  README.md  main.cpp
inc/: FWIConcepts.hpp  FWILiterals.hpp
